--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 <header>
+    <h1>Prueba Git</h1>
     <!--Logo Airbnb-->
 <div class="logo">
     <img src="./img/logo/logo_airbnb.png" width="100px">
