--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
 <header>
     <h1>Prueba Git</h1>
+    <div class="pruebagit">Probando</div>
     <!--Logo Airbnb-->
 <div class="logo">
     <img src="./img/logo/logo_airbnb.png" width="100px">
@@ -22,6 +23,7 @@
 <div class="search">
     <div class="C-lugar">
         Cualquier lugar
+        cualquier mundo
     </div>
     <div class="C-semana">
         Cualquier semana
