--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
 <header>
     <h1>Prueba Git</h1>
-    <div class="pruebagit">Probando</div>
+    <div class="pruebagit">Probando
+        Probando cambios desde Github a Git
+    </div>
     <!--Logo Airbnb-->
 <div class="logo">
     <img src="./img/logo/logo_airbnb.png" width="100px">
